
syntax = "proto3";

package auth;

import "google/api/annotations.proto";
/*
import "google/protobuf/empty.proto";
import "google/protobuf/duration.proto";
import "examples/sub/message.proto";
import "examples/sub2/message.proto";
import "google/protobuf/timestamp.proto";
*/
message VerifyRequest {
 string Token = 1;
}

message VerifyResponse {
 string UserID = 1;
}

message GetDetailRequest {
string UserID = 1;
}
message GetDetailResponse {
string UserID = 1;
string Email = 2;
string FirstName = 3;
string LastName =4;
// only set when creating users
string Password=5;
}

message AuthenticatePasswordRequest {
string Email=1;
string Password=2;
}
message VerifyPasswordResponse {
GetDetailResponse User = 1;
string Token = 2;
}

message CreateUserRequest {
// e.g. cnw
string UserName = 1;
// e.g. junkmail@conradwood.net
string Email = 2;
string FirstName = 3;
string LastName =4;
string Password=5;
}
service AuthenticationService {
// authenticate a user by username/password, return token
 rpc AuthenticatePassword(AuthenticatePasswordRequest) returns (VerifyPasswordResponse) ;

// verify a user by token
 rpc VerifyUserToken(VerifyRequest) returns (VerifyResponse);
 rpc GetUserByToken(VerifyRequest) returns (GetDetailResponse);
 rpc GetUserDetail(GetDetailRequest) returns (GetDetailResponse) ;
 rpc CreateUser(CreateUserRequest) returns (GetDetailResponse);
}
